syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "AuthServer.Shared";

service Auth {
  rpc WhoAmI (google.protobuf.Empty) returns (WhoAmIReply);
  rpc Login (LoginRequest) returns (LoginReply);
  rpc Logout (google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc VerifyEmail (VerifyEmailRequest) returns (VerifyEmailReply);
  rpc VerifyAuthenticatorToken (VerifyAuthenticatorTokenRequest) returns (VerifyAuthenticatorReply);
  rpc CheckPasswordBreach (CheckPasswordBreachRequest) returns (CheckPasswordBreachReply);
}

message CheckPasswordBreachRequest {
  string password = 1;
}

message CheckPasswordBreachReply {
  bool is_breached = 1;
}

message WhoAmIReply {
  bool is_authenticated = 1;
  google.protobuf.StringValue user_id = 2;
  bool is_installed = 3;
  repeated string roles = 4;
  google.protobuf.StringValue profile_picture = 5;
  string user_name = 6;
}

message LoginRequest {
  string userId = 1;
  string password = 2;
}

message LoginReply {
  LoginStateEnum state = 1;
}

enum LoginStateEnum {
  failed = 0;
  success = 1;
  twoFactorRequired = 2;
  blocked = 3;
  disabled = 4;
}

message VerifyEmailRequest {
  string userId = 1;
  string code = 2;
}

message VerifyEmailReply {
  bool success = 1;
}

message VerifyAuthenticatorTokenRequest {
  string token = 1;
}

message VerifyAuthenticatorReply {
  bool success = 1;
}